objects/dbu_StoreLocationTimezoneMapping__mdt.object
<CustomObject>
    <description>This mdt Contains Mapping between City, State of the Branch and its respective Time-Zone. It is used in Calculating Estimated Pickup Date (During Holiday and 03:00 PM Calculation.</description>
    <fields>
        <fullName>dbu_ApplicableTimezone__c</fullName>
        <label>dbu_ApplicableTimezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_City__c</fullName>
        <label>dbu_City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Country__c</fullName>
        <label>dbu_Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_GMTOffset__c</fullName>
        <label>dbu_GMTOffset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_State__c</fullName>
        <label>dbu_State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>dbu_StoreLocationTimezoneMapping</label>
    <pluralLabel>dbu_StoreLocationTimezoneMapping</pluralLabel>
</CustomObject>